feat: add mongodb

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ NETWORK_CHAINID = 0x05
 NETWORK_RPC_URL = https://eth-goerli.g.alchemy.com/v2/yourkey
 
 BUNDLER_CHAINID = 0x4337
+
+DB_HOST = localhost
+DB_PORT = 27018
+DB_USERNAME = root
+DB_PASSWORD = 123456
