--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NETWORK_RPC_URL = https://eth-goerli.g.alchemy.com/v2/yourkey
 BUNDLER_CHAINID = 0x4337
 BUNDLER_RPC_HOST = 127.0.0.1
 BUNDLER_RPC_PORT = 4337
+BUNDLER_BATCH_TX_TOTAL = 128
 
 DB_HOST = localhost
 DB_PORT = 27017
