--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ BUNDLER_CHAINID = 0x4337
 BUNDLER_RPC_HOST = 127.0.0.1
 BUNDLER_RPC_PORT = 4337
 BUNDLER_BATCH_TX_TOTAL = 128
+BUNDLER_ENTRY_POINT_ADDRESS =
+BUNDLER_MINER_ADDRESS =
+BUNDLER_MINER_PRIVATE_KEY =
 
 DB_HOST = localhost
 DB_PORT = 27017
