fixed: nginx bugs

--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -25,12 +25,12 @@ server {
   }
 
   # bundler
-#   location / {
-#     proxy_pass  http://bundler:4337/;
-#     proxy_set_header Host $http_host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#   }
+  location / {
+    proxy_pass  http://bundler:4337/;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
 
   gzip on;
   gzip_min_length 1k;
